<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">PC Builder</string>
    <string name="components">Components</string>
    <string name="builds">Builds</string>
    <string name="learn">Learn</string>
    <string name="account">Account</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dismiss">Dismiss</string>
    <string name="favorites">Favorites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none">None</string>
    <string name="integrated">Integrated</string>
    <string name="case_label">Case</string>
    <string name="motherboard">Motherboard</string>

    <string name="unit_gram">g</string>
    <string name="unit_millimeter">mm</string>
    <string name="unit_watt">W</string>
    <string name="unit_gigabytes">GB</string>

    <string name="search_components">Search for components</string>
    <string name="component_details">Component details</string>
    <string name="component_picture">Component picture</string>
    <string name="build_picture">Build picture</string>
    <string name="build_details">Build details</string>
    <string name="add_build">Add build</string>
    <string name="user_avatar">User avatar</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="navigate_up">Navigate up</string>

    <string name="build_edit">Edit build</string>
    <string name="build_compatibility">Build compatibility</string>
    <string name="add_new_component">Add new component</string>
    <string name="add_component">Add component</string>
    <string name="weight_in_g">Weight in grams</string>
    <string name="length_in_mm">Length in millimeters</string>
    <string name="width_in_mm">Width in millimeters</string>
    <string name="height_in_mm">Height in millimeters</string>
    <string name="component_added">Component added successfully</string>
    <string name="component_deleted">Component deleted successfully</string>
    <string name="avatar_not_loaded">Avatar not loaded</string>
    <string name="signed_out_success">Signed out successfully</string>
    <string name="sign_in_google">Continue with Google</string>
    <string name="no_account">No account?</string>
    <string name="have_account">Already have account?</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="clear_selection">Clear selection</string>
    <string name="compare_components">Compare components</string>
    <string name="choose_one_type">You must choose components of one type</string>
    <string name="equal_components">Component mustn\'t be the same</string>
    <string name="show_more">Show more</string>
    <string name="choose_component">Choose component</string>

    <string name="server_error">Error on the server side: try later</string>
    <string name="network_error">Can\'t connect to the server: check Internet connection</string>
    <string name="unknown_error">Unexpected application error</string>
    <string name="google_auth_error">Google authorization failed</string>
    <string name="no_google_id">Cannot retrieve id from Google account</string>
    <string name="favorite_components">Favorite components</string>
    <string name="image_not_loaded">Image not loaded</string>

    <string name="memory_type">Memory type</string>
    <string name="memory_ecc_support">Memory ECC support</string>

    <string name="cpu_socket">CPU socket</string>

    <string name="gpu_crossfire_x_support">CrossfireX support</string>
    <string name="gpu_sli_support">SLI support</string>
    <string name="gpu_multi_support_with_ways">%1$d Way</string>

    <string name="case_type">Case type</string>
    <string name="case_external_5_25_bays">External 5.25" bays</string>
    <string name="case_external_3_5_bays">External 3.5" bays</string>
    <string name="case_internal_3_5_bays">Internal 3.5" bays</string>
    <string name="case_internal_2_5_bays">Internal 2.5" bays</string>
    <string name="case_full_height_expansion_slots">Full-height expansion slots</string>
    <string name="case_half_height_expansion_slots">Half-height expansion slots</string>
    <string name="case_power_supply">Case power supply</string>
    <string name="case_power_supply_shroud">Case power supply shroud</string>
    <string name="shroud">Shroud</string>
    <string name="non_shroud">Non-shroud</string>
    <string name="case_side_panel_window">Side panel window</string>

    <string name="motherboard_form_factors">Motherboard form factors</string>
    <string name="motherboard_form_factor">Form factor</string>
    <string name="motherboard_chipset">Motherboard chipset</string>
    <string name="motherboard_max_memory_amount">Max memory amount</string>
    <string name="motherboard_memory_slot_count">Memory slot count</string>
    <string name="motherboard_pcie_x16_slots">PCIe x16 slots</string>
    <string name="motherboard_pcie_x8_slots">PCIe x8 slots</string>
    <string name="motherboard_pcie_x4_slots">PCIe x4 slots</string>
    <string name="motherboard_pcie_x1_slots">PCIe x1 slots</string>
    <string name="motherboard_pci_slots">PCI slots</string>
    <string name="motherboard_m2_slots">M.2 slots</string>
    <string name="motherboard_m_sata_slots">mSATA slots</string>
    <string name="motherboard_sata_3gbps_ports">SATA 3 GB/s ports</string>
    <string name="motherboard_sata_6gbps_ports">SATA 6 GB/s ports</string>
    <string name="motherboard_usb2_headers">USB 2.0 headers</string>
    <string name="motherboard_usb_3_2_gen1_headers">USB 3.2 gen 1 headers</string>
    <string name="motherboard_usb_3_2_gen2_headers">USB 3.2 gen 2 headers</string>
    <string name="motherboard_usb_3_2_gen2x2_headers">USB 3.2 gen 2x2 headers</string>
    <string name="build_saved">Build saved successfully</string>
    <string name="build_deleted">Build deleted successfully</string>
</resources>
